--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="fade-in">
       <h2>Koleksi Terbaru</h2>
-      <img src="img/encyvola.jpg" alt="Anggrek Cantik" width="300">
+      <img src="img/Encyvola.jpg" alt="Anggrek Cantik" width="300">
       <p><strong>Anggrek Encyvola</strong> - tampil elegan dan cocok untuk hadiah!</p>
       <a href="produk.html">Lihat Semua Produk</a>
     </section>
