--- a/produk.html
+++ b/produk.html
@@ -25,7 +25,7 @@
       <h2>Daftar Produk</h2>
 
       <div class="kartu-produk fade-in">
-        <img src="img/encyvola.jpg" alt="Anggrek Encyvola" width="200">
+        <img src="img/Encyvola.jpg" alt="Anggrek Encyvola" width="200">
         <h3>Anggrek Encyvola</h3>
         <p>Harga: Rp75.000</p>
         <a href="https://wa.me/62895366104549?text=Halo%20saya%20mau%20pesan%20Anggrek%20" target="_blank">Pesan via WhatsApp</a>
