--- a/tentang.html
+++ b/tentang.html
@@ -52,22 +52,22 @@
 
   <!-- Bagian foto unggulan di atas -->
   <div class="galeri-grid">
-    <img src="img/kebun-anggrek.jpg" alt="Kebun Anggrek">
+    <img src="img/Kebun-anggrek.jpg" alt="Kebun Anggrek">
     <img src="img/favoritku.jpg" alt="Anggrek Favoritku">
     <img src="img/aku-dan-anggrek.jpg" alt="Aku dan Anggrek">
   </div>
 
   <h3>Daftar Koleksi Anggrek</h3>
   <div class="galeri-grid">
-    <img src="img/dendrobium-magenta.jpg" alt="Dendrobium Magenta">
-    <img src="img/dendrobium-caesar.jpg" alt="Dendrobium Caesar">
-    <img src="img/brassocattleya.jpg" alt="Brassocattleya">
-    <img src="img/dendrobium-biggibum2.jpg" alt="Dendrobium Biggibum 2">
-    <img src="img/dendrobium-dark-brown-elder.jpg" alt="Dendrobium Dark Brown Elder">
-    <img src="img/dendrobium-mesangil.jpg" alt="Dendrobium Mesangil">
-    <img src="img/encyvola2.jpg" alt="Encyvola 2">
-    <img src="img/dendrobium-anosmun2.jpg" alt="Dendrobium"> <!-- Boleh muncul lagi -->
-    <img src="img/oncidium.jpg" alt="Oncidium">
+    <img src="img/Dendrobium-Magenta.jpg" alt="Dendrobium Magenta">
+    <img src="img/Dendrobium-Caesar.jpg" alt="Dendrobium Caesar">
+    <img src="img/Brassocattleya.jpg" alt="Brassocattleya">
+    <img src="img/Dendrobium-Biggibum2.jpg" alt="Dendrobium Biggibum 2">
+    <img src="img/Dendrobium-Dark-Brown-Elder.jpg" alt="Dendrobium Dark Brown Elder">
+    <img src="img/Dendrobium-Mesangil.jpg" alt="Dendrobium Mesangil">
+    <img src="img/Encyvola2.jpg" alt="Encyvola 2">
+    <img src="img/Dendrobium-Anosmun2.jpg" alt="Dendrobium"> <!-- Boleh muncul lagi -->
+    <img src="img/Oncidium.jpg" alt="Oncidium">
   </div>
 
   <p><em>Inilah koleksi anggrek yang saya rawat sendiri di kebun kecil saya ??</em></p>
